--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,12 +1,16 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .logo {
   font-size: 48px;
   font-weight: 900;
-  color: tomato;
+  color: rgb(252, 88, 59);
   background: white;
   padding: 4px 32px;
 }
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  margin: 0px;
+  padding: 0px;
 }
 
 a {
